# KUBYS

./: .gitignore  CMakeLists.txt  depo.h  kaynaklar.qrc  kitapekledialog.cpp  kitapekledialog.h  kitapekledialog.ui  kitaplar.csv  kitapmodel.cpp  kitapmodel.h  kitapyukleyici.cpp  kitapyukleyici.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oduncmodel.cpp  oduncmodel.h  oduncverdialog.cpp  oduncverdialog.h  oduncverdialog.ui  server_main.cpp  uyeekledialog.cpp  uyeekledialog.h  uyeekledialog.ui  uyemodel.cpp  uyemodel.h  varliklar.h
